getting the debuggers removed and directories added to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ file(GLOB FRONTEND_SOURCES
     "compiler/lexer/*.cpp"
     "compiler/parser/*.cpp"
     "compiler/frontend/*.cpp"
+    "compiler/lowering/*.cpp"
+    "compiler/runtime/*.cpp"
 )
 
 # ------------------------------------------------------------
@@ -34,4 +36,5 @@ target_include_directories(kcc PRIVATE
     ${CMAKE_SOURCE_DIR}/compiler/middle/import
     ${CMAKE_SOURCE_DIR}/compiler/middle/typechecker
     ${CMAKE_SOURCE_DIR}/compiler/runtime
+    ${CMAKE_SOURCE_DIR}/compiler/lowering    
 )
